--- a/MacroHero/Info.plist
+++ b/MacroHero/Info.plist
@@ -4,6 +4,7 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Montserrat-Medium.ttf</string>
 		<string>KGHAPPY.ttf</string>
 		<string>KGHAPPYSolid.ttf</string>
 	</array>
