--- a/MacroHero/Info.plist
+++ b/MacroHero/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>macro_calculator_key</key>
+	<string>$(macro_calculator_key)</string>
+	<key>edamam_app_id</key>
+	<string>$(edamam_app_id)</string>
+	<key>edamam_api_key</key>
+	<string>$(edamam_api_key)</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Montserrat-Medium.ttf</string>
