--- a/MacroHero/Info.plist
+++ b/MacroHero/Info.plist
@@ -6,8 +6,8 @@
 	<string>$(macro_calculator_key)</string>
 	<key>edamam_app_id</key>
 	<string>$(edamam_app_id)</string>
-	<key>edamam_api_key</key>
-	<string>$(edamam_api_key)</string>
+	<key>edamam_app_key</key>
+	<string>$(edamam_app_key)</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Montserrat-Medium.ttf</string>
